Add contact; add linkedin

--- a/hugo_site/config.without_secrets.yaml
+++ b/hugo_site/config.without_secrets.yaml
@@ -30,15 +30,15 @@ params:
       How’s business? Boomin. Let me be clear, you have to make it through the 
       jungle to make it to paradise, that’s the key, Lion!
   contact:
-    email: your@email.com
-    enable: false
-    title: Touch Me!
+    email: reshonda.d.williams@gmail.com
+    enable: true
+    title: I'd love to hear from you!
     namePlaceholder: Name
     emailPlaceholder: Email
     messagePlaceholder: Message
-    buttonText: Send it
+    buttonText: Send it!
     success: Thank you for contacting us.
-    error: 'Message could not be send. Please contact us at '
+    error: 'Message could not be sent. Please contact me at reshonda.d.williams@gmail.com'
   social:
     - title: Twitter
       icon: fa-twitter
@@ -48,8 +48,8 @@ params:
       icon: fa-instagram
       link: '#'
       target: _blank
-    - title: Facebook
-      icon: fa-facebook
+    - title: LinkedIn
+      icon: fa-linkedin-in
       link: '#'
       target: _blank
   footer:
